# kym2019

./: .gitignore  README.md  定位挑戰賽標準作業程序v2.md
fira_launch/default_config/: vision_better.yaml  vision_better.yaml~
fira_launch/launch/: localization.launch  main_launch.launch  main_launch.launch~  test_motion.launch
fira_status_plugin/: CMakeLists.txt  package.xml
imu_3d/: CMakeLists.txt
imu_3d/launch/: fsm9.launch
imu_3d/rule/: README
imu_3d/src/: fsm_imu_node.cpp  imu_3d.cpp
localization/: CMakeLists.txt  package.xml
localization/akf/: CMakeLists.txt
localization/reset/: CMakeLists.txt  NodeHandle.hpp
localization/transfer/: CMakeLists.txt  DisplayImage.cpp
motion/Attack_motion/: .base_control.cpp.swp  .motion.cpp.swp
motion/motion/Attack_motion/: .base_control.h.swp
self_localization/config/: localization.yaml
self_localization/distest/: main.cpp
self_localization/self_localization/: main.cpp
self_localization/self_localization/src/: localization.cpp  localization.cpp~  localization.h
simulator/fira_sim/: CMakeLists.txt
simulator/fira_sim/common/: CMakeLists.txt
strategy/: CMakeLists.txt  CMakeLists.txt~
strategy/FIRA_strategy/: CMakeLists.txt  FIRA_pathplan.cpp  FIRA_pathplan.h  strategy.cpp  strategy_nodeHandle.h
strategy/FIRA_teamStrategy/: CMakeLists.txt  FIRA_teamStrategy.h~  main.cpp  teamStrategy_nodeHandle.h
strategy/LC_method2/: CMakeLists.txt  Strategy.cpp
strategy/LC_method3/: CMakeLists.txt
strategy/LC_method4/: CMakeLists.txt  Initial.hpp  Strategy.cpp  Strategy.cpp~  Strategy.hpp  Strategy.hpp~  main.cpp  main.cpp~
strategy/LC_method5/: CMakeLists.txt  Strategy.cpp  motion.py
strategy/LC_method6/: CMakeLists.txt  NodeHandle.cpp  NodeHandle.hpp  Strategy.cpp  Strategy.hpp
strategy/LC_method6/Untitled Folder/: CMakeLists.txt  Env.hpp  NodeHandle.cpp  Strategy.cpp  main.cpp
strategy/LC_method7/: CMakeLists.txt  NodeHandle.cpp  Strategy.cpp  Strategy.hpp  main.cpp
strategy/common/: BaseNode.cpp  Env.h  defend_Env.h
strategy/defend_strategy/: CMakeLists.txt  FIRA_behavior.cpp  FIRA_behavior.h  FIRA_pathplan.cpp  FIRA_pathplan.h  strategy.cpp  strategy_nodeHandle.cpp  strategy_nodeHandle.h
strategy/defend_teamStrategy/: CMakeLists.txt  CMakeLists.txt~  FIRA_teamStrategy.h  main.cpp  teamStrategy_nodeHandle.h  teamStrategy_nodeHandle.h~
vision/: CMakeLists.txt
vision/black_item/: main.cpp  nodehandle.cpp
vision/config/: FIRA.yaml
vision/interface/: nodehandle.cpp  nodehandle.h
vision/killer/: +51515.cpp  CMakeLists.txt  main.cpp
vision/launch/: test.launch  vision.launch
vision/localization_white_line/: main.cpp  nodehandle.cpp  nodehandle.h  white_line.cpp  white_line.cpp~
vision/monitor/: main.cpp  monitor.cpp  monitor.h  nodehandle.cpp  nodehandle.h
vision/msg/: center.msg
vision/obstacle/: main.cpp  nodehandle.cpp  nodehandle.h  obstacle.cpp  obstacle.h
vision/route_plan/: CMakeLists.txt  main.cpp  nodehandle.cpp  nodehandle.h  route_plan.cpp  route_plan.h
vision/strategy_controler/: CMakeLists.txt  main.cpp
vision/tracking/: main.cpp
vision/white_line/: main.cpp  white_line.cpp
web/: 更新清單.txt
web/Localization_UI/: newLc.html
web/Localization_UI/css/: Lcworldmap.css
web/Localization_UI/js/: HoldBall.js  KeyboardControl.js  RosParam.js  RosTopic.js  variable.js  video.js
web/Motion_UI/: motion.html
web/Motion_UI/css/: Lcworldmap.css
web/Motion_UI/js/: Joystick.js  KeyboardControl.js  RosTopic.js  speed.js
web/Regular_UI/: strategy_ui.html
web/Regular_UI/css/: form.css
web/Regular_UI/js/: HoldBall.js  KeyboardControl.js  RosTopic.js  d_Rosservice.js  variable.js  video.js
web/Vision_UI/: interface_web.html
web/Vision_UI/js/: RosParameter.js  Rosservice.js
web/tb3_web/: tb3_race.html
web/tb3_web/css/: form.css
web/tb3_web/js/: KeyboardControl.js  init.js  variable.js
web/tb3_web/js/ros/: RosParameter.js  Rosservice.js  Rostopic.js  video.js
